# librus-mcp

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  pyproject.toml  secrets.json.template  verify_connection.py
.github/workflows/: ci.yml  publish.yml
src/: config.py  librus_client.py  patches.py  server.py
