[project]
name = "librus-mcp"
version = "0.1.0"
description = "MCP server for Librus Synergia electronic gradebook"
authors = [{name = "Krzysztof Bury"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "librus-apix>=0.1.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = [".venv", "venv", "__pycache__"]
# B101: assert used intentionally for input validation.
# B603/B607: subprocess calls are not used in this project.
skips = ["B101"]
