[project]
name = "librus-mcp"
version = "0.1.0"
description = "MCP server for Librus Synergia — access grades, messages, attendance, homework, timetables, and announcements from AI assistants"
authors = [{name = "Krzysztof Bury", email = "contact@datacraze.io"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "librus", "synergia", "gradebook", "llm", "claude", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=0.1.0",
    "librus-apix>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/krzysztoofbury/librus-mcp"
Repository = "https://github.com/krzysztoofbury/librus-mcp"
Issues = "https://github.com/krzysztoofbury/librus-mcp/issues"

[project.scripts]
librus-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = [".venv", "venv", "__pycache__"]
# B101: assert used intentionally for input validation.
skips = ["B101"]
